# gastimator

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SETUP.md  makefile
.github/workflows/: test.yml
crates/gastimate/: Cargo.toml
crates/gastimate/src/: cli.rs  main.rs
crates/gastimator/: Cargo.toml
crates/gastimator/src/: app_state.rs  decode_rlp.rs  gastimator.rs  lib.rs  local_gas_estimator.rs
crates/gastimator/src/alchemy_rpc/: alchemy_rpc.rs  id_stepper.rs  is_rpc_request.rs  mod.rs  request_estimate_gas_input.rs  rpc_request.rs  rpc_response.rs
crates/gastimator/src/gastimator/: dependencies.rs  gastimator.rs  mod.rs
crates/gastimator/src/models/: config.rs  error.rs  gas.rs  gas_usage.rs  mod.rs  raw_transaction.rs  server_config.rs  transaction.rs  transaction_kind.rs
crates/gastimator/src/models/snapshots/: gastimator__models__gas_usage__tests__json_snapshot_estimate.snap  gastimator__models__gas_usage__tests__json_snapshot_estimate_with_range.snap  gastimator__models__gas_usage__tests__serde_exact.snap
crates/gastimator/src/remote_gas_estimator/: mod.rs  remote_gas_estimator.rs
crates/gastimator/src/traits/: display_error.rs  mod.rs  ty_eq.rs
crates/rest-server/: Cargo.toml
crates/rest-server/src/: lib.rs  server.rs
crates/rest-server/tests/: integration.rs
